app/assets/stylesheets/style.css.scss
/* 
Junction is provided under the OFL and is available at http://www.theleagueofmoveabletype.com/junction or https://github.com/theleagueof/junction 
It was originally created by Caroline Hadilaksono: http://www.hadilaksono.com
*/

@font-face {
    font-family: 'Junction Regular';
    src: url('junction/webfonts/junction-regular.eot');
    src: url('junction/webfonts/junction-regular.eot?#iefix') format('embedded-opentype'),
         url('junction/webfonts/junction-regular.woff') format('woff'),
         url('junction/webfonts/junction-regular.ttf') format('truetype'),
         url('junction/webfonts/junction-regular.svg#junction') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Junction Light';
    src: url('junction/webfonts/junction-light.eot');
    src: url('junction/webfonts/junction-light.eot?#iefix') format('embedded-opentype'),
          url('junction/webfonts/junction-light.woff') format('woff'),
          url('junction/webfonts/junction-light.ttf') format('truetype'),
          url('junction/webfonts/junction-light.svg#junction') format('svg');
    font-weight: normal;
    font-style: normal;
}

.login-form {
  width: 200px;
  padding-left: 20px;
}

/* Application-wide styles */
h1, h2, h3, h4 {
  font-family: 'Junction Light', lucida grande,lucida sans console,sans-serif;
  font-weight:normal;
  color:#444;
}

label small {
  font-weight:normal;
  color:#888;
}

.container-fluid .row img {
  width: 100%;
  padding-bottom: 20px;
}

.link-thumbnail {
  position: relative;
  width: 100%;
}

.links {
  .btn {
    margin-bottom: 20px;
  }
  a .title {
    font-family: 'Junction Regular';
    color: #000;
    position: absolute;
    bottom: 19px;
    background-color: rgba(256, 256, 256, 0.8);
    width: 100%;
    height: 30px;
    text-align: right;
    padding: 5px;
    font-size: 1.15em;
  }
}

.footer {
  clear: both;
  margin: 20px 0 20px 0;
  padding: 20px 60px 40px;

  border-top: 1px solid #ddd;
  font-size: 14px;
  background:#eee;
  background-color: #f8f8f8;
  color:#333;

  .col-md-4 {
    padding-bottom:10px;
  }
}

.btn.create-map {
  width: 100%;
}

.maps-list {
  h2 { margin-top: 0; }
}

.sidebar-only {
  display: none;
}

.login-form {
  width: 200px;
  padding: 10px;
  label {
    margin-top: 5px;
    font-weight: normal;
  }
}

.alert-error {
  color: #a94442;
  background-color: #f2dede;
  border-color: #ebccd1;
}

